--- a/src/html/privacy/policy.html
+++ b/src/html/privacy/policy.html
@@ -27,7 +27,7 @@
     <p>
         1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика) применяется ко
         всей
-        информации, которую Оператор может получить о посетителях веб-сайта https://news.creagoo.ru.
+        информации, которую Оператор может получить о посетителях веб-сайта https://news.dybka.ru.
     </p>
     <h3>
         2. Основные понятия, используемые в Политике
@@ -44,7 +44,7 @@
     </p>
     <p>
         2.3. Веб-сайт – совокупность графических и информационных материалов, а также программ для ЭВМ и баз данных,
-        обеспечивающих их доступность в сети интернет по сетевому адресу https://news.creagoo.ru.
+        обеспечивающих их доступность в сети интернет по сетевому адресу https://news.dybka.ru.
     </p>
     <p>
         2.4. Информационная система персональных данных — совокупность содержащихся в базах данных персональных данных,
@@ -77,7 +77,7 @@
     </p>
     <p>
         2.8. Персональные данные – любая информация, относящаяся прямо или косвенно к определенному или определяемому
-        Пользователю веб-сайта https://news.creagoo.ru.
+        Пользователю веб-сайта https://news.dybka.ru.
     </p>
     <p>
         2.9. Персональные данные, разрешенные субъектом персональных данных для распространения, — персональные данные,
@@ -88,7 +88,7 @@
         персональных данных (далее — персональные данные, разрешенные для распространения).
     </p>
     <p>
-        2.10. Пользователь – любой посетитель веб-сайта https://news.creagoo.ru.
+        2.10. Пользователь – любой посетитель веб-сайта https://news.dybka.ru.
     </p>
     <p>
         2.11. Предоставление персональных данных – действия, направленные на раскрытие персональных данных определенному
@@ -330,7 +330,7 @@
     <ul>
         <li>информирование Пользователя посредством отправки электронных писем;</li>
         <li>предоставление доступа Пользователю к сервисам, информации и/или материалам, содержащимся на веб-сайте
-            https://news.creagoo.ru.</li>
+            https://news.dybka.ru.</li>
     </ul>
     <p>
         7.2. Также Оператор имеет право направлять Пользователю уведомления о новых продуктах и услугах, специальных
@@ -362,7 +362,7 @@
     <p>
         8.2. Оператор обрабатывает персональные данные Пользователя только в случае их заполнения и/или отправки
         Пользователем
-        самостоятельно через специальные формы, расположенные на сайте https://news.creagoo.ru или направленные
+        самостоятельно через специальные формы, расположенные на сайте https://news.dybka.ru или направленные
         Оператору
         посредством электронной почты. Заполняя соответствующие формы и/или отправляя свои персональные данные
         Оператору,
@@ -559,7 +559,7 @@
     </p>
     <p>
         14.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу
-        https://news.creagoo.ru/a/privacypolicy.
+        https://news.dybka.ru/a/privacypolicy.
     </p>
 
 </body>
