--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,7 +18,7 @@
                 <h1 class="display-5 fw-bold lh-1 mb-3">Эксклюзивные материалы каждую неделю</h1>
                 <p class="fs-5">
                     Читайте статьи про программирование. В удобном формате: Телеграм, Яндекс Дзен,
-                    news.creagoo.ru.
+                    news.dybka.ru.
                 </p>
                 <p class="fs-5">
                     Занимайте время полезной информацией вместе со Спешиал.
