--- a/src/html/privacy/termsofuse.html
+++ b/src/html/privacy/termsofuse.html
@@ -24,7 +24,7 @@
         <li>Пользователь — дееспособное физическое лицо, присоединившееся к настоящему
             Соглашению в собственном интересе либо выступающее от имени и в интересах
             представляемого им юридического лица;</li>
-        <li>Сайт Администрации/ Сайт — интернет-сайты, размещенные в домене https://news.creagoo.ru и его
+        <li>Сайт Администрации/ Сайт — интернет-сайты, размещенные в домене https://news.dybka.ru и его
             поддоменах;</li>
         <li>Сервис — комплекс услуг и лицензия, предоставляемые Пользователю с использованием
             Платформы;</li>
