work at view post

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -9,7 +9,75 @@
 
     })
 
-    about page
+    <main class="container">
+        <div class="border-bottom mb-5">
+            <h1>О проекте Special</h1>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Что такое Special?</h2>
+            <p>
+                Special — это открытый источник новостей от сайта dybka.ru, it.dybka.ru, creagoo.ru и других сайтов,
+                принадлежащих Даниилу Дыбка (dybka.ru).
+            </p>
+            <p>
+                Главная задача сайта Special — простым языком удобными методами доносить полезную информацию для людей.
+                Когда читать полезную информацию — выбор за Вами, очень удобно во время ожидания пробежаться
+                по одной-второй статье из списка «Интересные». Или целенаправленно просматривать обновления на
+                главной странице.
+            </p>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Стать автором</h2>
+            <p>
+                У Вас есть возможность предложить интересную новость, статью или тему для обсуждения. Для
+                добавления Вас в качестве автора на сайте новостей Special достаточно обратиться
+                на почтовый адрес, указанный внизу страницы и предложить свою новость.
+            </p>
+            <p>
+                Ваша заявка будет рассмотрена. В случае успеха новости будет предложено выбрать
+                аватарку для отображения на страницах и Ваша новость будет опубликована
+                на сайте Special.
+            </p>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Запрещенные темы</h2>
+            <p>
+                На сайте Special ведется активная борьба с ненормативной лексикой, оскорблениями,
+                разжиганием ненависти. На обсуждение запрещены: темы войны, темы религии, «острые» темы и прочие,
+                которые могут вызвать общих негатив у людей.
+            </p>
+            <p>
+                Главная цель новостей Special — донести информацию для людей удобным способом. Сюда не
+                входят задачи разжигания ненависти и оскорбления людей. Все публикуемые новости проходят
+                проверку модераторами. Опубликовать новость без согласия не представляется возможным.
+            </p>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Безопастность сайта</h2>
+            <p>
+                Домен news.dybka.ru использует защищенный метод подключения, используется SSL-сертификат для
+                безопастного и быстрого обмена содержимым с сайтом. Страницы сайта формируются до публикации.
+                Сайт Special не использует базу данных для получения информации, что обеспечивает
+                надежное получение содержимого статей.
+            </p>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Техническая оптимизация</h2>
+            <p>
+                Большое количество внимания было уделено на активную оптимизацию загрузки сайта, доступности содержимого
+                с клавиатуры, адаптивного отображения сайта на разных девайсах, возможности ознакомиться с содержимым при разных условиях.
+            </p>
+            <p>
+                Вышеперечисленные критерии не являются обязательными, это факт. В создании сайта есть лишь «рекомендации».
+                Но также существуют и отличия между хорошим сайтом и плохим. Плохим сайтом не хочется пользоваться, тогда какой
+                смысл от этого сайта, если пользователь не хочет получать информацию от сайта?
+            </p>
+            <p>
+                Активно уделяется внимание пользователю. Существует большое количество людей, которые тестируют отображение сайта. Это
+                действительно важные факторы, которые заставляют пользователей оставаться на сайте большее количество времени.
+            </p>
+        </div>
+    </main>
 
     @@include('../parts/footer.html', {
 
