--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -5,9 +5,26 @@
                 style="background-image: url(/img/placeholders/p-4.jpg)">
                 <div class="card--out card--out-1">
                     <div class="card-in--1">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h1 main--card-link card--text-size-big">
-                            Выгорание —<br>причины, симптомы, помощь
-                        </a>
+                        <div class="d-flex flex-column">
+                            <div class="d-flex flex-wrap align-items-center mb-2 card--more-block">
+                                <div class="d-flex align-items-center card--text-author">
+                                    <img src="/img/placeholders/u-1@min.jpg" width="32" alt="Фотография Даниила Дыбка"
+                                        class="me-2 rounded-circle">
+                                    Даниил Дыбка
+                                </div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d9d9d9"
+                                    class="mx-1" viewBox="0 0 16 16">
+                                    <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                                </svg>
+                                <div>
+                                    <p class="card--more-type mb-0">Статья</p>
+                                </div>
+                            </div>
+                            <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                                class="h1 main--card-link card--text-size-big">
+                                Название записи
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -22,8 +39,9 @@
                 style="background-image: url(/img/placeholders/p-1.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link card--text-size-normal">
-                            Выгорание —<br>причины, симптомы, лечение
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h3 main--card-link card--text-size-normal">
+                            Это уже вторая запись
                         </a>
                     </div>
                 </div>
@@ -34,8 +52,9 @@
                 style="background-image: url(/img/placeholders/p-5.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h3 main--card-link card--text-size-normal">
-                            Выгорание —<br>причины, симптомы, лечение
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h3 main--card-link card--text-size-normal">
+                            Теперь уже третья запись
                         </a>
                     </div>
                 </div>
@@ -51,8 +70,9 @@
                 style="background-image: url(/img/placeholders/p-1.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link card--text-size-small">
-                            Выгорание —<br>причины, симптомы, лечение
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h5 main--card-link card--text-size-small">
+                            А вот такое название у данной записи
                         </a>
                     </div>
                 </div>
@@ -63,8 +83,9 @@
                 style="background-image: url(/img/placeholders/p-4.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link card--text-size-small">
-                            Выгорание —<br>причины, симптомы, лечение
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h5 main--card-link card--text-size-small">
+                            Очень интересная запись
                         </a>
                     </div>
                 </div>
@@ -75,8 +96,9 @@
                 style="background-image: url(/img/placeholders/p-2.jpg)">
                 <div class="card--out card--out-2">
                     <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/" class="h5 main--card-link card--text-size-small">
-                            Выгорание —<br>причины, симптомы, лечение
+                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
+                            class="h5 main--card-link card--text-size-small">
+                            Действительно интересная запись
                         </a>
                     </div>
                 </div>
