--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -33,31 +33,23 @@
 </div>
 
 <div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-2 gx-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-1.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h3 main--card-link card--text-size-normal">
-                            Это уже вторая запись
-                        </a>
-                    </div>
+    <div class="row mb-2 row-cols-1 row-cols-lg-2 gx-2 g-lg-3">
+        <div class="col mb-3 mb-sm-0">
+            <a href="#" class="card card--link border-0">
+                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
                 </div>
-            </div>
+            </a>
         </div>
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-5.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h3 main--card-link card--text-size-normal">
-                            Теперь уже третья запись
-                        </a>
+        <div class="col">
+            <div class="col mb-3 mb-sm-0">
+                <a href="#" class="card border-0">
+                    <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay d-flex">
+                        <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
