--- a/src/html/example.html
+++ b/src/html/example.html
@@ -9,21 +9,20 @@
 
     })
 
-    <main>
-        <div class="row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+    <main class="container container--main">
+        <div class="row row-cols-1 row-cols-lg-2 gx-2 g-lg-3">
+            <div class="col mb-3 mb-sm-0">
+                <a href="#" class="card border-0">
+                    <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay d-flex">
+                        <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
                     </div>
-                </div>
+                </a>
             </div>
-            <div class="col-sm-6">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
+                        <h5 class="card-title">Короткое название</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
