--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="header--adaptive-more">
                         <button data-bs-toggle="offcanvas" data-bs-target="#mobileMenu" aria-controls="mobileMenu"
-                            class="btn header--invert-bg text-invert btn-rounded fs-5 ms-2 px-4 header--best-p">
+                            class="btn header--invert-bg btn-dark text-invert btn-rounded fs-5 ms-2 px-4 header--best-p">
                             <span class="d-flex align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert" viewBox="0 0 16 16">
                                     <path
