--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -4,7 +4,7 @@
             <a href="#" class="card card--link card--rounded border-0">
                 <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <h2 class="card-title text-white mt-auto mb-0">Card title</h2>
+                    <p class="card-title text-white mt-auto card--title card--title-1">Card title</p>
                 </div>
             </a>
         </div>
@@ -12,20 +12,36 @@
 </div>
 
 <div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-2 gx-2 g-lg-3">
+    <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
             <a href="#" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-2.jpg" class="card-img" alt="...">
+                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="#" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+                <img src="/img/placeholders/p-2.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-4.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
                 </div>
             </a>
         </div>
