--- a/src/html/p/vygoraniye-prichiny-simptomy-lecheniye/index.html
+++ b/src/html/p/vygoraniye-prichiny-simptomy-lecheniye/index.html
@@ -14,7 +14,7 @@
 
     })
 
-    <main class="container post--font-size main--post" style="backdrop-filter: blur(0.1rem);">
+    <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
             <h1>Почему выгорание действительно проблема?</h1>
@@ -23,7 +23,7 @@
 
         <figure class="post--start-img text-center">
             <img src="/img/placeholders/p-1.jpg" class="img-fluid" alt="">
-            <figcaption class="img--desc">Деревянная скульптура</figcaption>
+            <figcaption class="img--desc">Описание изображения</figcaption>
         </figure>
 
         <div class="container--post">
@@ -32,6 +32,12 @@
             </p>
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum facere mollitia repudiandae at vitae sit sequi, quam veritatis cumque numquam culpa, molestias eos autem quibusdam sunt explicabo ipsa quo dolorum.
+            </p>
+        </div>
+
+        <div class="container--post post--more">
+            <p class="post--more-text mb-0">Автор:
+                <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
             </p>
         </div>
 
