--- a/src/parts/p--all.html
+++ b/src/parts/p--all.html
@@ -1,108 +1,70 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-1 main--card-margin"
-                style="background-image: url(/img/placeholders/p-4.jpg)">
-                <div class="card--out card--out-1">
-                    <div class="card-in--1">
-                        <div class="d-flex flex-column">
-                            <div class="d-flex flex-wrap align-items-center mb-2 card--more-block">
-                                <div class="d-flex align-items-center card--text-author">
-                                    <img src="/img/placeholders/u-1@min.jpg" width="32" alt="Фотография Даниила Дыбка"
-                                        class="me-2 rounded-circle">
-                                    Даниил Дыбка
-                                </div>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d9d9d9"
-                                    class="mx-1" viewBox="0 0 16 16">
-                                    <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
-                                </svg>
-                                <div>
-                                    <p class="card--more-type mb-0">Статья</p>
-                                </div>
-                            </div>
-                            <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                                class="h1 main--card-link card--text-size-big">
-                                Название записи
-                            </a>
-                        </div>
-                    </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-1">Card title</p>
                 </div>
-            </div>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="container container--main">
+    <div class="row row-cols-1 row-cols-lg-2 gx-3">
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-2.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-4.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
         </div>
     </div>
 </div>
 
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-1.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h3 main--card-link card--text-size-normal">
-                            Это уже вторая запись
-                        </a>
-                    </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-2.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
                 </div>
-            </div>
+            </a>
         </div>
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-5.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h3 main--card-link card--text-size-normal">
-                            Теперь уже третья запись
-                        </a>
-                    </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-3 gx-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-1.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h5 main--card-link card--text-size-small">
-                            А вот такое название у данной записи
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-4.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h5 main--card-link card--text-size-small">
-                            Очень интересная запись
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-2.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h5 main--card-link card--text-size-small">
-                            Действительно интересная запись
-                        </a>
-                    </div>
-                </div>
-            </div>
+            </a>
         </div>
     </div>
 </div>
