--- a/src/parts/p--best.html
+++ b/src/parts/p--best.html
@@ -1,92 +1,70 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-1 main--card-margin"
-                style="background-image: url(/img/placeholders/p-4.jpg)">
-                <div class="card--out card--out-1">
-                    <div class="card-in--1">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h1 main--card-link card--text-size-big">
-                            Выгорание —<br>причины, симптомы, помощь
-                        </a>
-                    </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-1">Card title</p>
                 </div>
-            </div>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="container container--main">
+    <div class="row row-cols-1 row-cols-lg-2 gx-3">
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-2.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-4.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                </div>
+            </a>
         </div>
     </div>
 </div>
 
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-1.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h3 main--card-link card--text-size-normal">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-2.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
                 </div>
-            </div>
+            </a>
         </div>
-        <div class="col px-0">
-            <div class="main--card main--card-2 main--card-margin"
-                style="background-image: url(/img/placeholders/p-5.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h3 main--card-link card--text-size-normal">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="#" class="card card--link card--rounded border-0">
+                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-3 gx-2 g-lg-3">
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-1.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h5 main--card-link card--text-size-small">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-4.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h5 main--card-link card--text-size-small">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col px-0">
-            <div class="main--card main--card-3 main--card-margin"
-                style="background-image: url(/img/placeholders/p-2.jpg)">
-                <div class="card--out card--out-2">
-                    <div class="card-in--2">
-                        <a href="/p/vygoraniye-prichiny-simptomy-lecheniye/"
-                            class="h5 main--card-link card--text-size-small">
-                            Выгорание —<br>причины, симптомы, лечение
-                        </a>
-                    </div>
-                </div>
-            </div>
+            </a>
         </div>
     </div>
 </div>
