--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -1,7 +1,7 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
         <div class="col pb-3 mb-sm-0">
-            <a href="#" class="card card--link card--rounded border-0">
+            <a href="/p/vygoraniye-prichiny-simptomy-lecheniye" class="card card--link card--rounded border-0">
                 <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-1">Card title</p>
