--- a/src/html/about.html
+++ b/src/html/about.html
@@ -77,6 +77,15 @@
                 действительно важные факторы, которые заставляют пользователей оставаться на сайте большее количество времени.
             </p>
         </div>
+        <div class="fs-5 mb-5">
+            <h2>Доступность сайта</h2>
+            <p>
+                Сайт Special доступен для всех пользователей. Имеется возможность перемещаться по элементам с помощью клавиатуры
+                и получать доступ о информации интерактивных элементах. Настроена возможность использования программ для
+                чтения текста с экрана. Прописаны параметры-описания для изображений, чтобы все люди могли узнать, о чем
+                нам говорит размещенная на сайте картинка.
+            </p>
+        </div>
     </main>
 
     @@include('../parts/footer.html', {
