--- a/src/html/about.html
+++ b/src/html/about.html
@@ -86,6 +86,22 @@
                 нам говорит размещенная на сайте картинка.
             </p>
         </div>
+        <div class="fs-5 mb-5">
+            <h2>Исходники</h2>
+            <ul>
+                <li><a href="/download/special-dark.zip" class="link">Логотип черный</a></li>
+                <li><a href="/download/special-white.zip" class="link">Логотип белый</a></li>
+            </ul>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Шрифты</h2>
+            <p>
+                На сайте используется шрифт Unbounded начертания Regular для заголовка.
+            </p>
+            <p>
+                На сайте используется шрифт NotoSans начертаний Regular, Medium и Bold для остального текста.
+            </p>
+        </div>
     </main>
 
     @@include('../parts/footer.html', {
