--- a/src/html/about.html
+++ b/src/html/about.html
@@ -102,6 +102,12 @@
                 На сайте используется шрифт NotoSans начертаний Regular, Medium и Bold для остального текста.
             </p>
         </div>
+        <div class="fs-5 mb-5">
+            <h2>Автор</h2>
+            <p>
+                Сайт разрабатывается Даниилом Дыбка (<a href="//dybka.ru" target="_blank"class="link">dybka.ru</a>) с 15.01.2022 года.
+            </p>
+        </div>
     </main>
 
     @@include('../parts/footer.html', {
