--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -64,11 +64,11 @@
         <div class="d-flex flex-wrap justify-content-center">
             <a href="/privacy/" class="footer--more footer--more-link">Политики</a>
             <a href="mailto:daniil@creagoo.ru" class="footer--more footer--more-link">daniil@creagoo.ru</a>
-            <a href="/en/" class="footer--more footer--more-link">Английская версия</a>
+            <a href="/translate.html" class="footer--more footer--more-link">Перевод</a>
             <a href="/about.html" class="footer--more footer--more-link ">Подробнее</a>
             <button onClick="ChangeTheme()" class="btn footer--more footer--more-link rounded-0">Сменить тему</button>
             <a href="#" class="footer--more footer--more-link ">Получить RSS</a>
-            <a href="//it.dybka.ru" class="footer--more footer--more-link ">Проект от dybka.ru</a>
+            <a href="//it.dybka.ru" target="_blank" class="footer--more footer--more-link ">Проект от dybka.ru</a>
         </div>
     </div>
 </footer>
