small edits. add folder more

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -16,8 +16,9 @@
         <div class="fs-5 mb-5">
             <h2>Что такое Special?</h2>
             <p>
-                Special — это открытый источник новостей от сайта dybka.ru, it.dybka.ru, creagoo.ru и других сайтов,
-                принадлежащих Даниилу Дыбка (dybka.ru).
+                Special — это открытый источник новостей от сайта <a href="//dybka.ru" class="link">dybka.ru</a>,
+                <a href="//it.dybka.ru" class="link">it.dybka.ru</a>, <a href="//creagoo.ru" class="link">creagoo.ru</a> и других сайтов,
+                принадлежащих Даниилу Дыбка (<a href="//dybka.ru" class="link">dybka.ru</a>).
             </p>
             <p>
                 Главная задача сайта Special — простым языком удобными методами доносить полезную информацию для людей.
