--- a/src/parts/head.html
+++ b/src/parts/head.html
@@ -3,6 +3,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="description" content="Special — новостной канал: удобный и красивый">
+    <meta name="keywords" content="дыбка, даниил дыбка, спешиал, special">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Special — новостной канал: удобный и красивый">
+    <meta property="og:site_name" content="Special — новостной канал: удобный и красивый">
+    <meta property="og:description" content="Special — новостной канал: удобный и красивый">
+    <meta property="og:url" content="https://news.dybka.ru/">
+    <meta property="og:image" content="https://news.dybka.ru/img/logo/ico.ico">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Special — новостной канал: удобный и красивый">
+    <meta name="twitter:description" content="Special — новостной канал: удобный и красивый">
+    <meta name="twitter:site" content="https://news.dybka.ru/">
+    <meta name="twitter:image" content="https://news.dybka.ru/img/logo/ico.ico">
+    <meta name="Author" content="Дыбка Даниил">
+    <link rel="manifest" href="/manifest.json">
+
     @@if(context.title != "") {
         <title>@@title — Special</title>
     }
@@ -30,6 +46,5 @@
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/index.css">
-
-    <link rel="stylesheet" href="/css/grid.css">
+    <!-- <link rel="stylesheet" href="/css/grid.css"> -->
 </head>
