--- a/src/html/translate.html
+++ b/src/html/translate.html
@@ -1,1 +1,49 @@
-translate
+<!DOCTYPE html>
+<html lang="ru">
+@@include('../parts/head.html', {
+"title": ""
+})
+
+<body>
+    @@include('../parts/header.html', {
+    "activeItem": ""
+    })
+
+    <div class="container mb-3 text-center">
+        <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3">
+            <div class="col">
+                <div class="bg-light--me" style="border-radius: 8px;">
+                    <div class="p-4">
+                        <h1 class="h5 mb-3">Русский язык</h1>
+                        <div class="d-flex justify-content-center align-items-center">
+                            Текущий
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="bg-light--me" style="border-radius: 8px;">
+                    <div class="p-4">
+                        <h1 class="h5 mb-3">Английский</h1>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <a href="/en/" class="link">
+                                Перевести
+                            </a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#9d9d9d" class="ms-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8zm5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707l-4.096 4.096z" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @@include('../parts/footer.html', {
+
+    })
+</body>
+
+</html>
