--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -4,7 +4,7 @@
             <a href="/p/vygoraniye-prichiny-simptomy-lecheniye" class="card card--link card--rounded border-0">
                 <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-1">Card title</p>
+                    <p class="card-title text-white mt-auto card--title card--title-1">Путь программиста — это трудный путь?</p>
                 </div>
             </a>
         </div>
