start for another pages

--- a/src/parts/p--best.html
+++ b/src/parts/p--best.html
@@ -1,4 +1,4 @@
-<div class="container container--main">
+<!-- <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
         <div class="col pb-3 mb-sm-0">
             <a href="#" class="card card--link card--rounded border-0">
@@ -67,4 +67,8 @@
             </a>
         </div>
     </div>
+</div> -->
+
+<div class="container container--main">
+    <p class="display-4">На данный момент здесь нет статей</p>
 </div>
