--- a/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
+++ b/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
@@ -13,20 +13,78 @@
     <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
-            <h1>Путь программиста — это трудный путь?</h1>
-            <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
+            <h1>Новое поколение устройства - iPhone Xr</h1>
+            <p class="post--start-p">История, как полюбил iPhone Xr</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p001.jpg" class="img-fluid" alt="Фотография ноутбука с открытым браузером">
-            <figcaption class="img--desc">Фотография ноутбука с открытым браузером</figcaption>
+            <img src="/img/posts/p002.jpg" class="img-fluid" alt="Телефон лежит на столе">
+            <figcaption class="img--desc">Телефон лежит на столе</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Вопрос, поставленный в заголовке кому-то может показаться скорее риторическим, чем правда требующим ответа. Но скорей
-                вопрос несет в себе не смысл ответа «Да» или «Нет», а более глубокое изучение вопроса трудности деятельности
-                программиста.
+                Мне всегда было интересно опробовать новое устройство от Apple и мой выбор пал именно на iPhone Xr в связи с его
+                популярностью и удобством.
+            </p>
+            <p>
+                У меня получилось так, что я перешел на iPhone Xr с 6s, и моему удивлению не было предела!
+            </p>
+            <h3>Удобства</h3>
+            <p>
+                Face ID — очень удобная функция. У меня часто бывает ситуация мокрых пальцев, поэтому вариант с отпечатком пальца мне не
+                нравится. Почти все время приходится вводить пароль. А пароль мне часто приходится вводить из-за большого количества
+                информации, которую нужно охранять. Я смог позабыть о пароле, пока пользуюсь Face ID.
+            </p>
+            <p>
+                А Face ID отрабатывает достаточно точно. У меня не было проблем, как на презентации Apple. Узнает всегда. Пусть и
+                бывает, что я ввожу пароль, с данной функцией я точно подружился.
+            </p>
+            <p>
+                У телефона очень удобный форм фактор. Его действительно приятно держать в руке, он не режет мои руки, а дотягиваться до
+                краев экрана возможно, если использовать свайпы.
+            </p>
+            <p>
+                Новое для меня устройство, новый процессор и новые вычислительные ядра. Работа телефона куда стабильнее и надежнее, чем
+                6s. У меня лучше идут игры, программы. Быстрее загружаются. И лучше отображаются. Мне это нравится, пусть я и не работаю
+                так много в программах на телефоне, удобство для меня — это действительно важно.
+            </p>
+            <p>
+                А я полюбил челку. До этого я думал, что никогда не купил бы себе телефон с вырезом. А теперь мне очень даже нравится
+                челка. Но, пожалуй, именно челка. К другим «извращениям» я, пока что, не привык.
+            </p>
+            <p>
+                Челка не мешает просмотру содержимого. В любом случае, с ее помощью мы видим больше содержимого, потому что сбоку от
+                челки помещается техническая информация.
+            </p>
+            <h3>Почему именно iPhone Xr</h3>
+            <p>
+                Да, существует SE, 11 и 12. Но мой выбор пал на Xr из-за максимального количества плюсов и минимальной цены на аппарат.
+                На текущий момент рыночная цена устройства 16.000 рублей, в эту цену входит 100% цены телефона. И это прекрасно.
+            </p>
+            <p>
+                Xr — это форм фактор текущих телефонов Apple. Потому что SE представлены в старом дизайне. А 11 почти ничем не
+                отличается от XR.
+            </p>
+            <p>
+                Вот уже 12, 13 и 14 — разговор о другом. Но у меня не хватило на них бюджета, да и с текущим устройством меня все
+                устраивает.
+            </p>
+            <p>
+                Я уж не стану тут говорить, для каких задач может подойти Xr, потому что, я думаю, что каждый может сам понять для себя,
+                что ему нужно. В случае с iPhone Xr — на данном аппарате можно выполнять все, без исключения, и получать от этого
+                удовольствие.
+            </p>
+            <p>
+                Я не могу пользоваться андроид-телефонами. Ни в каком виде. И забавно, я не один такой. Пускай это называется разными
+                словами, Apple действительно могут максимально угодить пользователю.
+            </p>
+            <p>
+                Пользоваться их техникой очень комфортно. Хочется весь дом обставить в технику Apple. Важно это контролировать, потому
+                что есть нужные покупки, а есть ненужные.
+            </p>
+            <p>
+                В заключение хочу порекомендовать телефон к покупке. До встречи!
             </p>
         </div>
 
