--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -15,7 +15,7 @@
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
             <a href="/p/project-development-history-live.creagoo.ru-its-forced-closure" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="Ноутбук с открытым браузером">
+                <img src="/img/posts/p003.jpg" class="card-img" alt="Фотография логотипа Creagoo">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">История live.creagoo.ru</p>
                 </div>
@@ -23,7 +23,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/how-did-I-start-learning-programming" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-2.jpg" class="card-img" alt="...">
+                <img src="/img/posts/p004.jpg" class="card-img" alt="Фотография с кодом программиста">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">С чего я начал изучать программирование</p>
                 </div>
