--- a/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
+++ b/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
@@ -13,20 +13,100 @@
     <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
-            <h1>Путь программиста — это трудный путь?</h1>
-            <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
+            <h1>История разработки проекта live.creagoo.ru — его вынужденное закрытие</h1>
+            <p class="post--start-p">live.creagoo.ru должен был заменить основной сайт Creagoo.</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p001.jpg" class="img-fluid" alt="Фотография ноутбука с открытым браузером">
-            <figcaption class="img--desc">Фотография ноутбука с открытым браузером</figcaption>
+            <img src="/img/posts/p003.jpg" class="img-fluid" alt="Фотография логотипа Creagoo">
+            <figcaption class="img--desc">Фотография логотипа Creagoo</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Вопрос, поставленный в заголовке кому-то может показаться скорее риторическим, чем правда требующим ответа. Но скорей
-                вопрос несет в себе не смысл ответа «Да» или «Нет», а более глубокое изучение вопроса трудности деятельности
-                программиста.
+                Начнем с основ, проект live.creagoo.ru — это история изучения фреймворка Bootstrap. После CMS WordPress у меня появилось
+                острое желание заняться оптимизацией сайта, а для этого требовался контроль за разработкой. Я смог получить контроль,
+                создавая сайт самостоятельно.
+            </p>
+            <h3>Для чего используется Bootstrap</h3>
+            <p>
+                Bootstrap несет в себе заранее написанные стили и некоторые решения, использующие JavaScript. С помощью Bootstrap можно
+                создавать адаптивные сайты, без написания «базовых» стилей.
+            </p>
+            <p>
+                Использовался Bootstrap в связи с тем, что с его помощью можно достаточно быстро создать простой сайт. Этим я и решил
+                пользоваться и стал изучать Bootstrap. Мое изучение Bootstrap отразилось в создании проекта live.creagoo.ru.
+            </p>
+            <h3>Первые страницы, созданные для проекта live.creagoo.ru</h3>
+            <p>
+                Прежде всего стоит сказать, что проект live.creagoo.ru разрабатывался для игровой студии Creagoo, в которой я руковожу.
+                Первые страницы — это страницы игровых проектов, описания команды и история разработки логотипа. Это все базовые
+                страницы, без которых масштабный сайт не может существовать.
+            </p>
+            <h3>Блог в проекте live.creagoo.ru</h3>
+            <p>
+                Далее я стал вести в разработке и другие решения. Например, я разработал свой блог уже в 2020 году. Представлял он
+                собой обычную базу данных, вместе с языком программирования PHP, с помощью которого производилось подключение к базе
+                данных и управление записями из таблиц.
+            </p>
+            <h3>Персонализация контента — личный кабинет проекта live.creagoo.ru</h3>
+            <p>
+                После я решил вести в разработке свой личный кабинет, который я смог довести до ума только спустя 2 года в проекте
+                <a href="//id.creagoo.ru" class="link">аквариум</a>. Личный кабинет — это простое тестовое задание, проверяющее умение программиста управлять данными для
+                сохранения прогресса и персонализации контента для него.
+            </p>
+            <p>
+                В создании своего первого личного кабинета я смог совершить не малое количество ошибок, которые были сохранены в
+                финальной версии. Даже спустя долгое время разработки все равно появлялись ошибки, которые мешали работе системы. Но
+                если отладить и исправить ошибки можно без проблем, то плохой дизайн и слабые технологические решения исправить было
+                куда труднее.
+            </p>
+            <p>
+                Подбор плохих решений для использования обосновывалось моим малым опытом в сфере web-программирования. Я старался
+                заглаживать свои проблемы и не раз полностью переделывал структуру проекта. Сказать честно, это больше вредило, чем
+                приносило пользу. В текущее время я перестал доводить проекты до «идеала», ведь это все равно невозможно. Создание
+                «идеального» проекта является пустой тратой времени. Все, что хочется исправить сейчас следует оставить просто до лучших
+                времен.
+            </p>
+            <h3>Сообщения в проекте live.creagoo.ru</h3>
+            <p>
+                Также было реализовано интересное технологическое решение в лице возможности вести переписку с пользователями. Ты
+                самостоятельно выбираешь человека, с которым будешь общаться. Вводишь нужное сообщение, отправляешь, его получает
+                человек.
+            </p>
+            <p>
+                Все, как мы и привыкли видеть в обычных сообщениях с людьми. Мое решение отличалось плохой технической частью, о которой
+                я уже заявлял. Мое решение требовало постоянной перезагрузки страницы. Сообщение могло отправиться несколько раз после
+                перезагрузки страницы. Не отображалось, когда последний раз пользователь зашел в сеть и можно ли ему сейчас написать или
+                нет.
+            </p>
+            <h3>Зачем я стал вести проект live.creagoo.ru</h3>
+            <p>
+                Проект live.creagoo.ru существовал в качестве замены основного сайта. CMS WordPress предоставляло плохую техническую
+                часть, слабую оптимизацию и отсутствие возможности прямого редактирования сайта.
+            </p>
+            <p>
+                Я стал изучать Bootstrap, чтобы можно было быстро создавать сайты. У меня было мало опыта в создании своих сайтов
+                самостоятельно, поэтому я решил использовать фреймворк Bootstrap в качестве поддержки.
+            </p>
+            <p>
+                В будущем я планировал заменить текущий сайт <a href="//creagoo.ru" class="link">creagoo.ru</a> новым решением live.creagoo.ru. Спойлер: именно это у меня и
+                получилось. Сейчас на <a href="//creagoo.ru" class="link">creagoo.ru</a> расположен сайт, который я самостоятельно вел в разработке.
+            </p>
+            <h3>Почему я решил отказаться от использования CMS WordPress</h3>
+            <p>
+                CMS WordPress помогает вести разработку в более удобном формате. Но чаще всего, если проанализировать созданные сайты на
+                CMS WordPress, данные сайты имеют огромное количество проблем. Начиная от плохо адаптивных сайтов, отсутствия
+                преимуществ у сайтов. Также данные сайты часто имеют долгую и неоптимизированную загрузку, изображения в разных
+                форматах, которые совсем не используются.
+            </p>
+            <p>
+                Из-за проблем, которые внедряет в разрабатываемый сайт CMS WordPress я решил отказаться от использования данной CMS и
+                вполне рад этому.
+            </p>
+            <p>
+                В заключение я хочу сказать, чтобы Вы не боялись изучать новые технологии. Не бояться чего-то не знать или не уметь. Это
+                всегда можно будет исправить спустя время. Если верить в свое дело — Вы обязательно дойдете до успеха. Удачи!
             </p>
         </div>
 
