--- a/src/html/p/how-did-I-start-learning-programming/index.html
+++ b/src/html/p/how-did-I-start-learning-programming/index.html
@@ -13,20 +13,87 @@
     <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
-            <h1>Путь программиста — это трудный путь?</h1>
-            <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
+            <h1>С чего я начал изучать программирование</h1>
+            <p class="post--start-p">Постараюсь ответить на этот вопрос.</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p001.jpg" class="img-fluid" alt="Фотография ноутбука с открытым браузером">
-            <figcaption class="img--desc">Фотография ноутбука с открытым браузером</figcaption>
+            <img src="/img/posts/p004.jpg" class="img-fluid" alt="Фотография с кодом программиста">
+            <figcaption class="img--desc">Фотография с кодом программиста</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Вопрос, поставленный в заголовке кому-то может показаться скорее риторическим, чем правда требующим ответа. Но скорей
-                вопрос несет в себе не смысл ответа «Да» или «Нет», а более глубокое изучение вопроса трудности деятельности
-                программиста.
+                Программирование — весьма интересное направление, которое получило невероятную славу в 2020 году и имеет славу до сих
+                пор. В большей степени это связано с огромным спросом в программистах, которых становится все меньше. О удаленной работе
+                мы поговорим позже.
+            </p>
+            <h3>Первый проект</h3>
+            <p>
+                Первый проект, который я разрабатывал на своих плечах, с которым мне помогал мой научный руководитель — игровой проект
+                Babka On The Hunt. Это другая версия игры, представленная в Google Play.
+            </p>
+            <p>
+                Про данную игру я <a href="//youtu.be/lKLuwC9qb-w" class="link">записывал</a> подкаст, в котором рассказал, как именно я разрабатывал эту игру и к чему в итоге
+                пришел.
+            </p>
+            <p>
+                Я начинал изучать программирование с языка C. Скажу честно, это было невероятно сложно, потому что язык программирования
+                C даже спустя четыре года моей активной разработки не дается так просто, а я уже не говорю о том, чтобы начинать
+                изучение программирования именно с данного языка.
+            </p>
+            <p>
+                Для того, чтобы лучше понять смысл программирования с моим научным руководителем было решено разрабатывать свой игровой
+                проект, с которым я выступал на конкурсах и занимал места.
+            </p>
+            <h3>Мой первый сайт</h3>
+            <p>
+                Помимо наличия игрового проекта в разработке, мне всегда было интересно разработать свой сайт, которым будут
+                пользоваться люди. И я стал увлекаться еще и данным направлением.
+            </p>
+            <p>
+                С моим научным руководителем мы настроили сервер, и я сел за разработку. Первый сайт был далеко не идеальным примером в
+                web-разработке, именно поэтому я быстро заменил его другими решениями, пока не дошел до CMS WordPress.
+            </p>
+            <p>
+                После внедрения на свой сайт CMS WordPress я немного просел в разработке сайтов и мне сильно это не нравилось. Я очень
+                хотел вести свои сайты самостоятельно в разработке, чего и смог добиться после изучения фреймворка Bootstrap.
+            </p>
+            <p>
+                Так я и стал вести в разработке проект live.creagoo.ru, о котором писал статью ранее. Уже к этому моменту я активно
+                занимался разработкой игровых проектов и web-ресурсов.
+            </p>
+            <h3>Прочие занятия</h3>
+            <p>
+                Также я активно писал код и на Python’е, на котором, преимущественно, создавал алгоритмы и никогда не занимался
+                разработкой своей системы, потому что я всегда использовал другие языки программирования для решения своих технических
+                задач.
+            </p>
+            <p>
+                На Python’е я писал программы для работы в консоли. Создавал web-ресурсы с авторизацией пользователя и решал задачи с
+                искусственным интеллектом.
+            </p>
+            <h3>Как я познакомился с программированием</h3>
+            <p>
+                Все свое детство я был связан с техникой: телефонами, ноутбуками и прочими аппаратами. Меня всегда привлекало данное
+                направление и мне было интересно разбираться и чинить поделки.
+            </p>
+            <p>
+                Мое мышление позволяло на ходу создавать невероятные вещи из лего и прочих материалов из строительства. Поэтому было
+                решено отдать меня на кружок по 3D моделированию, на котором я познакомился с основами, продолжал заниматься
+                моделированием и успел создать цифровую копию умного города.
+            </p>
+            <p>
+                Да, знания в 3D моделировании мне точно пригодились и я уверен, что пригодятся в будущем. Но основное мое направление
+                было выбрано весьма несложно: мне предложили занять свободное время еще одним кружком, и я решил выбрать направление
+                программирования.
+            </p>
+            <p>
+                Я уже <a href="/p/the-path-of-a-programmer-is-a-difficult-path/" class="link">писал</a> статью, что ждет программиста на его пути. Я бы хотел пожелать удачи всем тем, кто только начинает
+                появляться в данном направлении и переходит к изучению нового для него языка программирования.
+            </p>
+            <p>
+                И конечно же всем остальным я тоже хочу выразить огромную благодарность и пожелать вам всего хорошего. Удачи!
             </p>
         </div>
 
